polissage du code